# pod_ini

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-single-platform.yml
scripts/: make_table.sh  mkversion.sh
sources/: CMakeLists.txt  reader.cpp
sources/base/: hash.cpp  hash.h  pod_racer.cpp  pod_racer.h  strings.cpp  strings.h  threads.cpp
sources/include/base/: clocks.h  hash.h  strings.h  threads.h  timed.h
sources/include/pod/: pod-racer.h  pod-valid.h  pod_racer.h
sources/include/versions/: build.h
sources/pod/: pod-racer.cpp  pod_racer.cpp
sources/tools/: reader.cpp
tests/: CMakeLists.txt  config-gen.sh  config.cpp  ini-normalize.sh  worker.cpp
tests/in/: example-small.ini
